WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91804
REGRESSION(
r121420
): Performance regression of form state saving for pages with multiple forms
https://bugs.webkit.org/show_bug.cgi?id=91804
Summary
REGRESSION(r121420): Performance regression of form state saving for pages wi...
Kent Tamura
Reported
2012-07-19 20:33:21 PDT
http://code.google.com/p/chromium/issues/detail?id=137395
The function createKey() introduced by
r121420
can be O(N^2) if a page has multiple form elements with an identical action URL.
http://www.reddit.com/r/AskReddit/comments/wjr6y/every_time_i_leave_a_hotel_i_strip_the_beds_fold/
contains 202 <form> elements with action="#". Chromium saves form state whenever a page is scrolled.
Attachments
Patch
(4.72 KB, patch)
2012-07-19 22:33 PDT
,
Kent Tamura
morrita
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2012-07-19 22:33:05 PDT
Created
attachment 153412
[details]
Patch
Hajime Morrita
Comment 2
2012-07-20 01:01:45 PDT
Comment on
attachment 153412
[details]
Patch Okay. I should have caught this at the original review...
Kent Tamura
Comment 3
2012-07-20 01:04:15 PDT
Committed
r123191
: <
http://trac.webkit.org/changeset/123191
>
Kent Tamura
Comment 4
2012-07-24 16:13:03 PDT
Reverted
r123191
for reason: It might cause another performance regression. Committed
r123547
: <
http://trac.webkit.org/changeset/123547
>
Kent Tamura
Comment 5
2012-07-25 18:36:56 PDT
Committed
r123691
: <
http://trac.webkit.org/changeset/123691
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug